# factored_dbt_demo

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
dbt/: .user.yml  dbt_project.yml
dbt/models/: sources.yml
dbt/models/marts/: dim_customers.sql  dim_products.sql  fct_order_items.sql  mart_sales_summary.sql
dbt/models/staging/: stg_customers.sql  stg_order_items.sql  stg_orders.sql  stg_products.sql
scripts/: run_pipeline.sh
src/ingest/: api_ingest.py  db.py  generate_orders.py
